index dosyasi degisti

--- a/index.html
+++ b/index.html
@@ -1,8 +1,41 @@
+<!DOCTYPE html>
+<html lang="tr">
 <head>
-<title>kodluyoruzdailkwebsayfam</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>kodluyoruzdailkwebsayfam</title>
 </head>
+
 <h1>Enis ERDEM</h1> <!--  Başlik olarak adimi ve soyadimi yazdim -->
 <h2>Hakkimda</h2> <!-- Alt başlik olarak Hakkımda yazdım-->
 <!-- alt başlığa hakkımdaki şeyleri paragraf olarak yazdım-->
 <p>Merhaba. Ben Enis Erdem! Gaziantep'te yaşiyorum ve Gaziantep Üniversitesinde okuyorum. Kodluyoruz'un desteğiyle Front-End eğitimi aliyorum ve eğitimden çok memnunum. Harika şeyler öğrendim ve öğrenmeye devam ediyorum. Desteği geçen herkese teşekkür ediyorum.
 </p>
+<h2>İlgi Alanlarim</h2>
+<ol>
+    <li>Sevdiğim Filmler</li>
+    <ul> 
+        <li>Matrix</li>
+        <li>Avengers:End Game</li>
+        <li>Terminatör</li>
+    </ul>
+    <li>Sevdiğim Diziler</li>
+    <ul>
+        <li>Sherlock Holmes </li> 
+        <li>Stranger Things</li>
+        <li>Wednesday</li>
+    </ul>
+    <li>Sevdiğim Kitaplar</li>
+    <ul>
+        <li>Sherlock Holmes</li>
+        <li>İnce Memed</li>
+    </ul>
+</ol>
+<h2>Sevdiğim Film ve Kitabin Linkleri:</h2>
+<a href="https://www.imdb.com/title/tt4154796/" target="_blank">
+    <img width="300" height="300" src="avengers.jpeg" alt="">
+</a>
+<a href="https://www.goodreads.com/book/show/16125640-sherlock-holmes-k-z-l-l-m" target="_blank">
+    <img width="300" height="300" src="sherlock.jpeg" alt="">
+</a>
